--- a/src/Components/Statistics.css
+++ b/src/Components/Statistics.css
@@ -1,10 +1,10 @@
 .statistics__container {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .statistics__title {
@@ -14,7 +14,7 @@
     justify-content: center;
     flex-direction: column;
     min-width: 100%;
-    padding: 4em 0;
+    padding: 1.5em 0;
 }
 
 .statistics__title h2 {
@@ -29,20 +29,21 @@
 }
 
 .statistics__container-cards {
+    position: relative;
     background-color: var(--gray);
+    min-height: 20em;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: auto;
     gap: 1.5em;
     max-width: 100%;
 }
 
 .statistics__card {
     position: relative;
-    z-index: 3;
+    z-index: 4;
     padding: 3rem 2rem 1rem 2rem;
-    border-radius: 0.5em;
+    border-radius: 0.3em;
     text-align: center;
     transform: translateY(0);
     background-color: white;
@@ -50,11 +51,11 @@
 }
 
 .card-2 {
-    transform: translateY(2em); 
+    transform: translateY(1.5em); 
 }
 
 .card-3 {
-    transform: translateY(4.5em); 
+    transform: translateY(3em); 
 }
 
 .statistics__card h3 {
@@ -87,10 +88,10 @@
     content: "";
     position: absolute;
     top: 50%;
-    left: -1.67em; 
+    left: -1.50em; 
     width: calc(100% + 100px);
-    height: 0.2rem;
+    height: 0.4rem;
     background-color: var(--cyan);
     transform: translateY(-50%);
-    z-index: -1; 
+    z-index: -2; 
 }
