--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -2,30 +2,28 @@
     display: flex;
     align-items: center;
     justify-content: left;  
-    border: 2px solid blue;
     position: relative;
-    overflow-x: hidden;
+    color: var(--very-dark-blue);
 }
 
 .banner__content {
     width: 100%;
     z-index: 2;
+    margin-top: 4em;
     display: flex;
     align-items: left;
     justify-content: center;
     flex-direction: column;
-    border: 2px solid red;
     padding: 5em 0;
 }
 
 .banner__image {
-    max-width: 40rem;
+    max-width: 60rem;
     position: absolute;
     top: 50%; 
-    right: 0%;  
+    right: -20%;  
+    z-index: 1;
     transform: translateY(-50%);
-    z-index: -1;
-    border: 2px solid black;   
 }
 
 .banner__image img {
