--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -14,7 +14,7 @@
     align-items: left;
     justify-content: center;
     flex-direction: column;
-    padding: 5em 0;
+    padding: 8em 0 3em 0;
 }
 
 .banner__image {
