--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -25,7 +25,7 @@
 
 .nav__buttons {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     gap: 20px;
 }
