--- a/src/Components/Statistics.css
+++ b/src/Components/Statistics.css
@@ -1,11 +1,20 @@
 .statistics__container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    overflow: hidden;
-    padding: 4em 3em;
+    padding: 4em 0;
+    z-index: 3;
+}
+
+.shortener {
+    position: absolute;
+    top: 0; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    z-index: 3;
 }
 
 .statistics__title {
@@ -15,7 +24,7 @@
     justify-content: center;
     flex-direction: column;
     min-width: 100%;
-    padding: 1.5em 0;
+    padding: 8em 0 2em 0;
 }
 
 .statistics__title h2 {
@@ -30,6 +39,7 @@
 }
 
 .statistics__container-cards {
+    padding: 4em 6em;
     position: relative;
     background-color: var(--gray);
     min-height: 20em;
