--- a/src/Components/Shortener.css
+++ b/src/Components/Shortener.css
@@ -54,8 +54,16 @@ input[type="url"] {
     border-radius: 0.5em;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0.5em;
     min-width: 100%;
+}
+
+.container-link-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1em;
+    width: 100%;
 }
 
