--- a/src/Components/Shortener.css
+++ b/src/Components/Shortener.css
@@ -9,6 +9,7 @@
     background-color: var(--dark-violet);
     border-radius: 0.5em;
     padding: 2.5em;
+    width: 65em;
 }
 
 .shortener__content {
@@ -50,20 +51,22 @@ input[type="url"] {
 }
 
 .shortener__container-link {
-    background-color: white;
-    border-radius: 0.5em;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.5em;
-    min-width: 100%;
+    flex-direction: column;
+    gap: 0.5em;
+    padding: 0;
 }
 
 .container-link-content {
+    padding: 0.5em;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 1em;
     width: 100%;
+    border-radius: 0.5em;
 }
 
