--- a/src/Components/Spinner.css
+++ b/src/Components/Spinner.css
@@ -1,26 +1,33 @@
 .spinner-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
-    background-color: #f4f4f4; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f4f4f4;
+}
+
+.spinner {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid var(--cyan);
+  border-radius: 50%;
+  width: 3em;
+  height: 3em;
+  animation: spin 0.5s linear infinite;
+}
+
+.spinner-container.button {
+  background-color: hsl(180, 66%, 49%, 0.5);
+  width: 3em;
+  height: 3em;
+  border: none;
+  background: none;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .spinner {
-    border: 8px solid #f3f3f3; 
-    border-top: 8px solid var(--cyan); 
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 0.5s linear infinite;
+  100% {
+    transform: rotate(360deg);
   }
-  
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  
+}
