--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ body, html {
   height: 100vh;
   max-width: 100%;
   background-color: var(--gray);
+  scroll-behavior: smooth;
 }
 
 .app__container {
@@ -34,3 +35,17 @@ body, html {
   padding: 4em 6em;
   overflow-x: hidden;
 }
+
+@media (max-width: 768px) {
+  .app__container {
+    padding: 2em 4em;
+  }
+}
+
+@media (max-width: 480px) { 
+  .app__container {
+    padding: 2em 2em;
+    font-size: 16px;
+  }
+}
+
