--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,43 +1,149 @@
 .nav {
-    color: var(--grayish-violet);
-    font-weight: var(--font-weight-bold);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  color: var(--grayish-violet);
+  font-weight: var(--font-weight-bold);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  z-index: 5;
 }
 
 .nav__container {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1;
+}
+
+.nav__menu {
+  display: none;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.nav__menu.active {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 10%);
+  background-color: var(--dark-violet);
+  border-radius: 0.5rem;
+  z-index: 999;
+  border: 2px solid black;
+  gap: 0.5rem;
+  padding: 0.5rem 0.5rem;
+  transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
 .nav__links {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  padding: 0;
+  width: 100%;
 }
 
 .nav__links a:visited {
-    color: var(--gray);
+  color: var(--gray);
 }
 
 .nav__links a:hover {
-    color: var(--very-dark-violet);
+  color: var(--very-dark-violet);
+}
+
+.nav__menu-underline {
+  width: 100%;
+  height: 2px;
+  background-color: var(--grayish-violet);
+  border: none;
+  margin: 0;
 }
 
 .nav__buttons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: none;
-    border: none;
-    cursor: pointer;
-    color: var(--gray);
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  background: none;
+  border: none;
+  cursor: pointer;
+  gap: 20px;
+  width: 100%;
+}
+
+.nav__login {
+  color: white;
 }
 
 .nav__login:hover {
-    color: var(--very-dark-violet);
+  color: var(--very-dark-violet);
+}
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 0.45rem;
+}
+
+.line {
+  width: 30px;
+  height: 3px;
+  background-color: var(--grayish-violet);
+  transition: all 0.3s ease-in-out;
+}
+
+.line.open:nth-child(1) {
+  transform: translateY(11px) rotate(45deg);
+}
+
+.line.open:nth-child(2) {
+  opacity: 0;
+}
+
+.line.open:nth-child(3) {
+  transform: translateY(-11px) rotate(-45deg);
+}
+
+@media (min-width: 768px) {
+  .hamburger {
+    display: none;
+  }
+
+  .nav__menu {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .nav__buttons {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    flex-direction: row;
+    flex: 1;
+  }
+
+  .nav__links {
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding-left: 1em;
+    flex: 2;
+  }
+
+  .nav__login {
+    color: var(--grayish-violet);
+  }
+
+  .nav__menu-underline {
+    display: none;
+  }
 }
