--- a/src/Components/Shortener.css
+++ b/src/Components/Shortener.css
@@ -8,12 +8,12 @@
   background-repeat: no-repeat;
   background-color: var(--dark-violet);
   border-radius: 0.5em;
-  padding: 2.5em;
-  width: 65em; 
+  width: 100%; 
   position: absolute;
   top: 0; 
   left: 50%; 
   transform: translate(-50%, -50%);
+  padding: 2em 4em;
 }
 
 .shortener__content {
