--- a/src/Components/Statistics.css
+++ b/src/Components/Statistics.css
@@ -1,116 +1,116 @@
 .statistics__container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 4em 0;
-    z-index: 3;
-    width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 4em 0;
+  z-index: 3;
+  width: 100%;
 }
 
 .shortener {
-    width: 100%;
-    margin-top: 2rem;
-    padding: 0em 4em;
+  width: 100%;
+  margin-top: 2rem;
+  padding: 0em 4em;
 }
 
 .statistics__title {
-    background-color: var(--gray);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    min-width: 100%;
-    padding: 6em 0em;
-    text-align: center;
+  background-color: var(--gray);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-width: 100%;
+  padding: 6em 0em;
+  text-align: center;
 }
 
 .statistics__title h2 {
-    font-size: 2em;
-    color: var(--very-dark-violet);
+  font-size: 2em;
+  color: var(--very-dark-violet);
 }
 
 .statistics__title p {
-    color: var(--grayish-violet);
-    text-align: center;
-    padding: 0.5em 0;
+  color: var(--grayish-violet);
+  text-align: center;
+  padding: 0.5em 0;
 }
 
 .statistics__container-cards {
-    padding: 4em 6em;
-    position: relative;
-    background-color: var(--gray);
-    min-height: 20em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1.5em;
-    max-width: 100%;
+  padding: 4em 6em;
+  position: relative;
+  background-color: var(--gray);
+  min-height: 20em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.5em;
+  max-width: 100%;
 }
 
 .statistics__card {
-    position: relative;
-    z-index: 4;
-    padding: 3rem 2rem 1rem 2rem;
-    border-radius: 0.3em;
-    text-align: center;
-    transform: translateY(0);
-    background-color: white;
-    text-align: left;
+  position: relative;
+  z-index: 4;
+  padding: 3rem 2rem 1rem 2rem;
+  border-radius: 0.3em;
+  text-align: center;
+  transform: translateY(0);
+  background-color: white;
+  text-align: left;
 }
 
 .card-2 {
-    transform: translateY(1em); 
+  transform: translateY(1em);
 }
 
 .card-3 {
-    transform: translateY(2.5em); 
+  transform: translateY(2.5em);
 }
 
 .statistics__card h3 {
-    font-size: 1.25rem;
-    color: var(--very-dark-violet);
-    margin-bottom: 0.5rem;
+  font-size: 1.25rem;
+  color: var(--very-dark-violet);
+  margin-bottom: 0.5rem;
 }
-  
+
 .statistics__card p {
-    font-size: 0.875rem;
-    color: var(--grayish-violet);
-    margin: 1rem 0;
+  font-size: 0.875rem;
+  color: var(--grayish-violet);
+  margin: 1rem 0;
 }
 
 .statistics__card-image {
-    position: absolute;
-    top: 0; 
-    left: 20%; 
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #3b3054;
-    width: 4.5rem;
-    height: 4.5rem;
-    border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3b3054;
+  width: 4.5rem;
+  height: 4.5rem;
+  border-radius: 50%;
 }
 
 .statistics__card::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 100%; 
-    width: calc(1.5em + 4px); 
-    height: 0.5rem;
-    background-color: var(--cyan); 
-    transform: translateY(-50%);
-    z-index: 2;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  width: calc(1.5em + 4px);
+  height: 0.5rem;
+  background-color: var(--cyan);
+  transform: translateY(-50%);
+  z-index: 2;
 }
 
 .card-2::before {
-    width: calc(1.5em + 4px); 
+  width: calc(1.5em + 4px);
 }
 
 .card-3::before {
-    display: none; 
+  display: none;
 }
