--- a/src/Components/Shortener.css
+++ b/src/Components/Shortener.css
@@ -60,7 +60,7 @@ input[type="url"] {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 0.5em;
+  gap: 1em;
   padding: 0; 
 }
 
@@ -119,12 +119,26 @@ input[type="url"] {
   align-items: center;
 }
 
+.close-icon {
+  transition: stroke 0.3s ease, transform 0.3s ease; 
+  margin-right: 0.5em;
+}
+
+.close-icon:hover {
+  transform: scale(1.2); 
+  background-color: rgb(209, 220, 230);
+}
+
 @media (max-width: 768px) {
   .shortener__container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1em 2em;
+    padding: 2em 2em;
+  }
+
+  .shortener__container-link {
+    padding-top: 2em;
   }
 
   .shortener__text-error {
@@ -145,23 +159,31 @@ input[type="url"] {
     align-items: center;
     flex-direction: column;
     width: 100%;
-    border: 2px solid green;
+    overflow: hidden;
+    padding: 0;
   }
 
   .container__link-shortened {
-    text-align: left;
-    
+    display: flex;    
     flex-direction: column;
+    align-items: center;
     width: 100%;
-    border: 2px solid yellow;
     padding: 0.5em;
     justify-content: left;
+    overflow: hidden;
+    padding: 1em;
+  }
+
+  .container__link-shortened a {
+    width: 100%;
   }
 
   .container__link-original {
-    border: 2px solid red;
     width: 100%;
     padding: 0.5em;
+    overflow: hidden;
+    border-bottom: 1px solid var(--grayish-violet);
+    padding: 1em;
   }
   
 }
